yeni deneme özellikler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,11 @@
-spring.application.name=support-bridge
-
-# --- Veritaban? Ba?lant? Ayarlar? ---
+ï»¿spring.application.name=support-bridge
 spring.datasource.url=jdbc:postgresql://localhost:5432/support_bridge_db
 spring.datasource.username=postgres
 spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-# --- Hibernate (Tablo Olu?turma) Ayarlar? ---
-# update: Entity s?n?flar?n? (User vb.) veritaban?nda otomatik tabloya dönü?türür.
 spring.jpa.hibernate.ddl-auto=update
-
-# Konsolda SQL sorgular?n? gösterir (Hata ay?klamak için çok yararl?)
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-# --- Geçici Güvenlik Ayar? ---
-# Spring Security ekledi?imiz için her aç?l??ta ?ifre sormas?n, standart olsun.
 spring.security.user.name=admin
 spring.security.user.password=admin123
